[package]
name = "ripple-xrpl"
version = "0.1.0"
edition = "2021"
description = "A Rust library for XRPL (Ripple) operations including token transfers and transaction signing"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
ed25519-dalek = "2.0"
sha2 = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
